Add new GIF assets for horror immunity and blinding effects in sun pathway documentation

--- a/src/content/docs/pathways/sun.mdx
+++ b/src/content/docs/pathways/sun.mdx
@@ -12,6 +12,8 @@ import holy_light from '../../../assets/pathways/sun/holy-light.gif';
 import better_holy_light from '../../../assets/pathways/sun/better-holy-light.gif';
 import holy_oath from '../../../assets/pathways/sun/holy-oath.gif';
 import holy_cleave from '../../../assets/pathways/sun/holy-cleave.gif';
+import horror_immunity from '../../../assets/pathways/sun/horror-immunity.gif';
+import blinding from '../../../assets/pathways/sun/blinding.gif';
 
 :::caution[⚠️ Дисклеймер]
 > 🎭 За те, що дарує доля, завжди доводиться платити, чи не так?
@@ -72,8 +74,16 @@ import holy_cleave from '../../../assets/pathways/sun/holy-cleave.gif';
     <Image src={holy_light} alt="Світло і Вогонь"/>
 </p>
 
+<p align={"center"}>
+    <Image src={blinding} alt="Засліплення"/>
+</p>
+
 #### 🛡️ Імунітет до Жаху
 Надає імунітет до ефектів страху та психічних атак (негативних ефектів)
+
+<p align={"center"}>
+    <Image src={horror_immunity} alt="Імунітет до Жаху"/>
+</p>
 
 {/* [GIF демонстрація] */}
 
