Update dependencies and integrate GIF assets for error documentation

--- a/src/content/docs/pathways/error.mdx
+++ b/src/content/docs/pathways/error.mdx
@@ -6,6 +6,10 @@ sidebar:
     order: 7
 ---
 
+import {Image} from "astro:assets";
+import dexterous_hands from '../../../assets/pathways/error/dexterous-hands.gif';
+import acrobatic_skills from '../../../assets/pathways/error/acrobatic-skills.gif';
+
 :::caution[⚠️ Дисклеймер]
 > 🎭 За те, що дарує доля, завжди доводиться платити, чи не так?
 
@@ -48,12 +52,16 @@ sidebar:
 #### 🎯 Акробатичні Навички
 Ви можете кидати тяжкі гострі предмети, наносячи шкоду при попаданні. Після кидка треба підбирати предмет.
 
-{/* [GIF демонстрація] */}
+<p align={"center"}>
+    <Image src={acrobatic_skills} alt="Акробатичні Навички"/>
+</p>
 
 #### 🖐️ Ловкість Рук
 Ви можете притягувати до себе предмети здалеку. Для цього наведіться на предмет, натисніть Shift та ЛКМ.
 
-{/* [GIF демонстрація] */}
+<p align={"center"}>
+    <Image src={dexterous_hands} alt="Ловкість Рук"/>
+</p>
 
 ---
 
