Add GIF support for Priest abilities and clean up Demoness doc
Incorporated GIFs demonstrating Priest abilities for better clarity and visualization. Removed unnecessary spacing in the Demoness documentation for consistency.

--- a/src/content/docs/pathways/priest.mdx
+++ b/src/content/docs/pathways/priest.mdx
@@ -6,6 +6,12 @@ sidebar:
     order: 5
 ---
 
+import {Image} from "astro:assets";
+import trap from '../../../assets/pathways/priest/trap.gif';
+import provocation from '../../../assets/pathways/priest/provocation.gif';
+import blazing_spear_1 from '../../../assets/pathways/priest/blazing-spear-1.gif';
+import blazing_spear_2 from '../../../assets/pathways/priest/blazing-spear-2.gif';
+
 :::caution[⚠️ Дисклеймер]
 > 🎭 За те, що дарує доля, завжди доводиться платити, чи не так?
 
@@ -48,7 +54,9 @@ sidebar:
 #### 💣 Вибухова Пастка
 Встановлюйте пастки, що вибухають при активації. Ви маєте імунітет до власних пасток.
 
-{/* [GIF демонстрація] */}
+<p align={"center"}>
+    <Image src={trap} alt="Вибухова Пастка"/>
+</p>
 
 #### 💪 Тіло Мисливця
 Ви швидше відновлюєте здоров'я, а за повного здоров'я отримуєте посилення сили.
@@ -64,7 +72,9 @@ sidebar:
 #### 👊 Провокація
 Насміхайтесь із ворогів, щоби вони атакували вас, завдаючи їм ментальних ушкоджень.
 
-{/* [GIF демонстрація] */}
+<p align={"center"}>
+    <Image src={provocation} alt="Провокація"/>
+</p>
 
 ---
 
@@ -85,7 +95,13 @@ sidebar:
 #### 🔱 Палаючий Спис
 Кидайте спис із вогню, щоб пронизувати ворогів.
 
-{/* [GIF демонстрація] */}
+<p align={"center"}>
+    <Image src={blazing_spear_1} alt="Палаючий Спис"/>
+</p>
+
+<p align={"center"}>
+    <Image src={blazing_spear_2} alt="Палаючий Спис"/>
+</p>
 
 ---
 
