Add fire raven demonstration

--- a/src/content/docs/pathways/priest.mdx
+++ b/src/content/docs/pathways/priest.mdx
@@ -11,6 +11,7 @@ import trap from '../../../assets/pathways/priest/trap.gif';
 import provocation from '../../../assets/pathways/priest/provocation.gif';
 import blazing_spear_1 from '../../../assets/pathways/priest/blazing-spear-1.gif';
 import blazing_spear_2 from '../../../assets/pathways/priest/blazing-spear-2.gif';
+import fire_raven from '../../../assets/pathways/priest/fire-raven.gif';
 
 :::caution[⚠️ Дисклеймер]
 > 🎭 За те, що дарує доля, завжди доводиться платити, чи не так?
@@ -85,7 +86,9 @@ import blazing_spear_2 from '../../../assets/pathways/priest/blazing-spear-2.gif
 #### 🔥 Вогненний Ворон
 Закликаєте вогненного ворона для атаки ворогів. Він вибухне під час смерті.
 
-{/* [GIF демонстрація] */}
+<p align={"center"}>
+    <Image src={fire_raven} alt="Вогненний Ворон"/>
+</p>
 
 #### 🛡️ Вогнестійкість
 Надає опір до вогневої шкоди.
