Add new pathways and abilities for various character classes

--- a/src/content/docs/general/additions.mdx
+++ b/src/content/docs/general/additions.mdx
@@ -159,3 +159,5 @@ import light_craft from '../../../assets/additions/light-craft.png';
 <p align="center">
     <img src={light_craft.src} width="60%" alt="Крафт світла"/>
 </p>
+
+> P.S. Зілля невидимості має бути на 3 хвилини, щоб крафт спрацював
