--- a/src/content/docs/general/features.mdx
+++ b/src/content/docs/general/features.mdx
@@ -25,8 +25,13 @@ import bluemap from '../../../assets/additions/bluemap.png';
 - **Усі предмети** з інвентаря
 - **Частину XP**
 
-⏳ *Душа зберігається лише **30 хвилин**!*
-⌨️ Щоб забрати її вміст, **натисніть Shift + ПКМ** по душі.
+- ⏳ *Душа зберігається лише **30 хвилин**!*
+
+- ⌨️ Щоб забрати її вміст, **натисніть Shift + ПКМ** по душі.
+
+- Душі не зникають, якщо сервер перезавантажується.
+
+- 💬 Щоб інший гравець міг забрати вашу душу, використовуйте /grave trust \<нік\>.
 
 ---
 
