--- a/src/content/docs/general/start.mdx
+++ b/src/content/docs/general/start.mdx
@@ -31,7 +31,7 @@ sidebar:
 
 ## ⏳ Час перевірки анкети
 
-Система перевірки анкет працює **швидко та автоматично**. Зазвичай відповідь надходить **протягом 10-30 хвилин** після подання заявки. Враховуйте, що **час відповіді може змінюватися** залежно від навантаження на сервер та часу доби.
+Система перевірки анкет працює **швидко та автоматично**. Зазвичай відповідь надходить **протягом 1 доби** після подання заявки. Враховуйте, що **час відповіді може змінюватися** залежно від навантаження на сервер та часу доби.
 
 ⚠️ **Якщо відповіді немає довше, ніж очікується**, зверніться до адміністрації сервера.
 
