--- a/src/content/docs/pathways/demoness.mdx
+++ b/src/content/docs/pathways/demoness.mdx
@@ -50,14 +50,14 @@ import feather from '../../../assets/pathways/demoness/feather-falling.gif';
 ---
 
 #### 🗡️ Прихований Удар
-Завдайте смертельного удару з тіні. Якщо ворог не підозрює, шкода підвищується.
+Завдайте смертельного вдару з тіні. Якщо ворог не підозрює, шкода підвищується. Коли ви атакуєте будь-яку сутність зі спини, і вона не має вас у полі огляду - шкода за атаку підвищується.
 
 <p align={"center"}>
     <Image src={stealth} alt="Прихований удар"/>
 </p>
 
 #### 🍃 Пір'їнкове Падіння
-Приземляйтеся з великої висоти м'яко.
+Приземляйтеся з великої висоти м'яко. Надає ефект повільного падіння поки ви використовуєте здібність.
 
 <p align={"center"}>
     <Image src={feather} alt="Плавне падіння"/>
@@ -72,12 +72,12 @@ import feather from '../../../assets/pathways/demoness/feather-falling.gif';
 ---
 
 #### 🎭 Підбурення
-Маніпулюйте емоціями, створюючи конфлікт. Ви можете провокувати ворогів нападати одне на одного.
+Маніпулюйте емоціями, створюючи конфлікт. Ви можете провокувати ворогів нападати одне на одного. Оберіть ціль, потім іншу, і ви змусите їх битися.
 
 {/* [GIF демонстрація] */}
 
 #### 👥 Крок у Тінь
-Ви невидимі, якщо перебуваєте в тіні.
+Ви невидимі, якщо перебуваєте в тіні. Для цього потрібно стояти в мало-освітленому місці.
 
 {/* [GIF демонстрація] */}
 
@@ -88,12 +88,12 @@ import feather from '../../../assets/pathways/demoness/feather-falling.gif';
 ---
 
 #### ✨ Жіноча Чарівність
-Ви перетворюєтеся на жінку. Ваша принада може зачарувати ворогів.
+Ви перетворюєтеся на жінку. Ваша принада може зачарувати ворогів. З випадковим шансом до вашого повідомлення додасться сердечко, а навколо вашої голови блищать рожеві ріжки.
 
 {/* [GIF демонстрація] */}
 
 #### 🖤 Темне Полум'я
-Закликаєте полум'я, що горить темрявою.
+Закликаєте полум'я, що горить темрявою. Наносить шкоду та підпалює ціль, якщо ви влучили.
 
 {/* [GIF демонстрація] */}
 
@@ -103,11 +103,36 @@ import feather from '../../../assets/pathways/demoness/feather-falling.gif';
 {/* [GIF демонстрація] */}
 
 #### 🪞 Заміна Дзеркалом
-Ви можете підмінити себе дзеркалом, яке прийме на себе шкоду замість вас.
+Ви можете підмінити себе дзеркалом, яке візьме на себе шкоду замість вас. Коли ви отримаєте пошкодження, воно зламається, а ви з'явитеся поруч неушкодженим.
 
 {/* [GIF демонстрація] */}
 
 ---
+
+### 📊 6 рівень: Насолода
+
+---
+
+#### 🕸️ Нитки
+Створює павукоподібні нитки, якими можна шмагати ворогів, створювати цілющий кокон або відстежувати цілі.
+
+#### ❄️ Сніжний Спис
+Заклинає спис морозу, який завдає шкоди та вповільнює ворогів.
+
+{/* [GIF демонстрація] */}
+
+### 📊 5 рівень: Страждання
+
+---
+
+#### 🦠 Хвороба
+Випустіть смертельний патоген, що розповсюдить вітер і заразить усе живе.
+
+#### 🧵 Ниткові Руки
+Підійміть та жбурніть блок за допомогою ниток.
+
+#### 🪞 Дзеркальне Прокляття
+Спіймайте відображення ворога у дзеркалі та накладіть страшне прокляття.
 
 ## ❓ Часті питання
 
