--- a/src/content/docs/pathways/door.mdx
+++ b/src/content/docs/pathways/door.mdx
@@ -109,6 +109,28 @@ import tricks from '../../../assets/pathways/door/tricks.webp';
     <Image src={divination3} alt="Пророцтво"/>
 </p>
 
+### 📊 6 рівень: Переписувач
+
+---
+
+#### ⚡ Ланцюгова Реакція
+Використайте електростатику, щоб вдарити ворога блискавкою!
+
+#### 📜 Запис
+Запишіть магічну здібність іншого Потойбічного. Ефекти можуть відрізнятися!
+
+---
+
+### 📊 5 рівень: Мандрівник
+
+---
+
+#### ✨ Теле-стрибок
+Розірвіть простір та телепортуйтеся на невелику відстань у напрямку погляду.
+
+#### 🚪 Двері Мандрівника
+Відкрийте Магічні Двері, які приведуть вас туди, куди ви забажаєте.
+
 ---
 
 ## ❓ Часті питання
