--- a/src/content/docs/pathways/fool.mdx
+++ b/src/content/docs/pathways/fool.mdx
@@ -92,6 +92,18 @@ sidebar:
 
 {/* [GIF демонстрація] */}
 
+### 📊 6 рівень: Безликий
+
+#### 🌀 Перевтілення
+Змініть свою зовнішність, щоб ідеально імітувати інших гравців або істот подібного розміру.
+
+---
+
+### 📊 5 рівень: Ляльковод
+
+#### 🧵 Маніпуляція
+Керуйте Духовними Нитками інших сутностей, поступово перетворюючи їх на ваших маріонеток.
+
 ---
 
 ## ❓ Часті питання
