--- a/src/content/docs/pathways/priest.mdx
+++ b/src/content/docs/pathways/priest.mdx
@@ -106,6 +106,34 @@ import fire_raven from '../../../assets/pathways/priest/fire-raven.gif';
     <Image src={blazing_spear_2} alt="Палаючий Спис"/>
 </p>
 
+### 📊 6 рівень: Змовник
+
+---
+
+#### 🧠 Покращений Розум
+Пасивно підвищує розумові здібності та зменшує тривалість негативних ментальних ефектів.
+
+#### 🔥 Підбурювання
+Підбурюйте гравця атакувати іншу конкретну ціль, змушуючи його зосередитися лише на цій цілі.
+
+#### 🌀 Змова
+Створіть сценарій плутанини, де ціль повинна розгадати загадку або зазнати наслідків.
+
+---
+
+### 📊 5 рівень: Жнець
+
+---
+
+#### 🎯 Точність
+Націльтеся на область з точністю, запускаючи вогняні снаряди, які відстежують до 5 цілей у межах досяжності.
+
+#### 🕵️‍♂️ Дослідження Слабкостей
+Виявляйте вразливості та слабкі місця цілі, роблячи її більш сприйнятливою до ваших атак.
+
+#### ⚔️ Жнива
+Завдайте серію з трьох нищівних атак, які націлені на життєво важливі слабкі місця. Якщо всі три вдари влучать в одну ціль, вони можуть завдати смертельного удару.
+
 ---
 
 ## ❓ Часті питання
