--- a/src/content/docs/pathways/sun.mdx
+++ b/src/content/docs/pathways/sun.mdx
@@ -110,9 +110,27 @@ import blinding from '../../../assets/pathways/sun/blinding.gif';
 #### ✨ Святе Світло
 Випромінює священну енергію для очищення і зцілення (у випадку з мобами - навпаки)
 
-<p align={"center"}>
-    <Image src={better_holy_light} alt="Святе Світло"/>
-</p>
+### 📊 6 рівень: Нотаріус
+
+---
+
+#### 💪 Підсилення
+Посильте свого товариша по команді, щоб завдати більше шкоди за цей час!
+
+#### 🛡️ Послаблення
+Зведіть нанівець зусилля ворога та зменшіть його шкоду!
+
+---
+
+### 📊 5 рівень: Священик Світла
+
+---
+
+#### ✨ Боже Світло
+Смертельний промінь Світла, який випалює все навколо.
+
+#### 🔥 Коло Очищення
+Ділянка навколо вас очищує будь-який прояв зла протягом деякого часу.
 
 ---
 
