--- a/src/content/docs/pathways/tyrant.mdx
+++ b/src/content/docs/pathways/tyrant.mdx
@@ -46,9 +46,9 @@ sidebar:
 ---
 
 #### 🛡️ Примарна Луска
-Створює ілюзорну броню, що поглинає шкоду і робить вас слизькими для ударів.
+Створює ілюзорну броню, що поглинає шкоду та робить вас слизькими для ударів.
 
-Для цього потрібно добряче змокнути у воді, після чого луска буде ще тривати і розпадатися деякий час
+Для цього потрібно добряче змокнути у воді, після чого луска буде ще тривати та розпадатися деякий час
 
 {/* [GIF демонстрація] */}
 
@@ -89,6 +89,26 @@ sidebar:
 
 {/* [GIF демонстрація] */}
 
+To add abilities for sequences 6 and 5, you can include the following code in the appropriate section of your file:
+
+### 📊 6 рівень: Благословенний Вітром
+
+#### ⚡ Удар Блискавки
+Викликайте потужні удари блискавки, які пошкоджують та паралізують ворогів
+
+#### 🎵 Пісня Сирени
+Співайте містичну пісню, що може впливати на ворогів або посилювати союзників різними ефектами.
+
+---
+
+### 📊 5 рівень: Співак Океану
+
+#### ✨ Політ
+Використовуйте повітряні потоки, щоб пропелером рухатися в повітрі на коротку відстань.
+
+#### 🌀 Повітряні Пута
+Створіть спіральні вітри, які обмежують рух цілі.
+
 ---
 
 ## ❓ Часті питання
@@ -97,7 +117,6 @@ sidebar:
 Головними перевагами є:
 - Надзвичайна витривалість та захист завдяки примарній лусці
 - Чудова адаптація до водного середовища
-- Потужні нападні здібності, особливо в стані люті
 - Унікальні здібності для дослідження океанів та морської навігації
 
 ### ⚠️ Які недоліки Шляху Тирана?
