--- a/src/content/docs/guides/qct.mdx
+++ b/src/content/docs/guides/qct.mdx
@@ -37,9 +37,10 @@ import trader from '../../../assets/qct/trader.png';
 
 ## 🧳 Мандрівний торговець
 
-🚶‍♂️ Під час ваших пригод з **невеликим шансом** ви можете натрапити на **мандрівного торговця**!
+🚶‍♂️ Ви можете зустріти **мандрівного торговця** під час своїх подорожей або в **Святилищі** (на спавні)
 
 💰 Він пропонує **обміняти ваші знахідки** на корисні предмети або навіть **валюту сервера**.
+
 🔥 Не пропустіть його — можливо, саме він допоможе вам знайти щось справді **цінне**!
 
 <p align={"center"}>
