--- a/src/content/docs/pathways/error.mdx
+++ b/src/content/docs/pathways/error.mdx
@@ -87,6 +87,28 @@ import acrobatic_skills from '../../../assets/pathways/error/acrobatic-skills.gi
 
 ---
 
+### 📊 6 рівень: Прометей
+
+---
+
+#### 🧠 Крадіжка Сили
+Починаючи з Послідовності 6, Крадіжка Сили дозволяє вам вкрасти силу Бейондера цілі та використовувати її самостійно протягом приблизно 10 хвилин, просто махнувши зап'ястями. Успішність залежить від вашого знання їхнього шляху та різниці в послідовностях.
+
+---
+
+### 📊 5 рівень: Крадій Снів
+
+---
+
+#### 🧠 Крадіжка Думок
+Дозволяє красти думки, знання та буденні здібності від цілей.
+
+#### 🌙 Нічний Гість
+Ви можете приходити до інших гравців уві сні. Майте на увазі, щойно вони щось запідозрять чи прокинуться — ви повернетеся назад!
+
+
+---
+
 ## ❓ Часті питання
 
 ### 💪 Які основні переваги Шляху Помилки?
