Add new light and purification abilities with corresponding images

--- a/src/content/docs/pathways/sun.mdx
+++ b/src/content/docs/pathways/sun.mdx
@@ -8,12 +8,16 @@ sidebar:
 
 import {Image} from "astro:assets";
 import bard_song from '../../../assets/pathways/sun/bard-song.gif';
-import holy_light from '../../../assets/pathways/sun/holy-light.gif';
 import better_holy_light from '../../../assets/pathways/sun/better-holy-light.gif';
 import holy_oath from '../../../assets/pathways/sun/holy-oath.gif';
 import holy_cleave from '../../../assets/pathways/sun/holy-cleave.gif';
 import horror_immunity from '../../../assets/pathways/sun/horror-immunity.gif';
 import blinding from '../../../assets/pathways/sun/blinding.gif';
+
+import light_of_purification from '../../../assets/pathways/sun/light-of-purification.gif';
+import amplification from '../../../assets/pathways/sun/amplification.gif';
+import nullification from '../../../assets/pathways/sun/nullification.gif';
+import purification_circle from '../../../assets/pathways/sun/purification-circle.gif';
 
 :::caution[⚠️ Дисклеймер]
 > 🎭 За те, що дарує доля, завжди доводиться платити, чи не так?
@@ -71,7 +75,7 @@ import blinding from '../../../assets/pathways/sun/blinding.gif';
 Скористайтеся силою світла та вогню, щоб вигнати темряву.
 
 <p align={"center"}>
-    <Image src={holy_light} alt="Світло і Вогонь"/>
+    <Image src={better_holy_light} alt="Світло і Вогонь"/>
 </p>
 
 <p align={"center"}>
@@ -117,8 +121,16 @@ import blinding from '../../../assets/pathways/sun/blinding.gif';
 #### 💪 Підсилення
 Посильте свого товариша по команді, щоб завдати більше шкоди за цей час!
 
+<p align={"center"}>
+    <Image src={amplification}  alt="Підсилення"/>
+</p>
+
 #### 🛡️ Послаблення
 Зведіть нанівець зусилля ворога та зменшіть його шкоду!
+
+<p align={"center"}>
+    <Image src={nullification}  alt="Послаблення"/>
+</p>
 
 ---
 
@@ -129,8 +141,17 @@ import blinding from '../../../assets/pathways/sun/blinding.gif';
 #### ✨ Боже Світло
 Смертельний промінь Світла, який випалює все навколо.
 
+<p align={"center"}>
+    <Image src={light_of_purification}  alt="Боже Світло"/>
+</p>
+
+
 #### 🔥 Коло Очищення
 Ділянка навколо вас очищує будь-який прояв зла протягом деякого часу.
+
+<p align={"center"}>
+    <Image src={purification_circle}  alt="Коло Очищення"/>
+</p>
 
 ---
 
