Add crafting recipes for potion and enchanted book bundles

--- a/src/content/docs/general/additions.mdx
+++ b/src/content/docs/general/additions.mdx
@@ -19,6 +19,8 @@ import trowel_use from '../../../assets/additions/trowel-preview.gif';
 import slime_bucket from '../../../assets/additions/slime-bucket.gif';
 import exp_bottle from '../../../assets/additions/exp-bottle.png';
 import light_craft from '../../../assets/additions/light-craft.png';
+import potion_bundle_craft from '../../../assets/additions/potion-bundle-craft.png';
+import book_bundle_craft from '../../../assets/additions/book-bundle-craft.png';
 
 > **Тут ви знайдете всі додаткові можливості, які покращують ваш досвід гри на сервері!**
 
@@ -161,3 +163,19 @@ import light_craft from '../../../assets/additions/light-craft.png';
 </p>
 
 > P.S. Зілля невидимості має бути на 3 хвилини, щоб крафт спрацював
+
+---
+
+## 🛍️ Мішечки для зіллів/зачарованих книг
+
+- Зберігайте **до 16 зіллів** в одному слоті інветарю. Працює аналогічно ванільному мішечку.
+
+<p align="center">
+    <img src={potion_bundle_craft.src} width="60%" alt="Крафт мішечка для зіллів"/>
+</p>
+
+- Зберігайте **до 64 книг зачарування** в одному слоті інвентарю. Працює аналогічно ванільному мішечку.
+
+<p align="center">
+    <img src={book_bundle_craft.src} width="60%" alt="Крафт мішечка для зачарованих книг"/>
+</p>
