Add middle sequences for Visionary pathway

--- a/src/content/docs/pathways/visionary.mdx
+++ b/src/content/docs/pathways/visionary.mdx
@@ -84,6 +84,33 @@ sidebar:
 
 ---
 
+### 📊 6 рівень: Гіпнотизер
+
+---
+
+#### 🛡️ Драконяча Луска
+Ваше тіло формує шар невидимої луски, яка може зменшити фізичні пошкодження.
+
+#### 😶‍🌫️ Психологічна Невидимість
+Зробіть себе невидимим для свідомості цілі. Вони не сприйматимуть вас, навіть якщо ви стоїте перед ними.
+
+#### 😵‍💫 Бойовий Гіпноз
+Вводить ворога у короткий гіпнотичний стан, змушуючи їх виконувати ненормальні дії.
+
+---
+
+### 📊 5 рівень: Сновидець
+
+---
+
+#### 🧠 Видозміна
+Посадіть сугестії глибоко в підсвідомість цілі, змушуючи реагувати їх певним чином на конкретні ситуації.
+
+#### 🛌 Подорож Снами
+Перетворіться на безтілесного та подорожуйте кріз сни, телепортуючись до сплячих гравців у межах досяжності.
+
+---
+
 ## ❓ Часті питання
 
 ### 💪 Які основні переваги Шляху Провидця?
