Add middle sequences for Fortune pathway

--- a/src/content/docs/pathways/fortune.mdx
+++ b/src/content/docs/pathways/fortune.mdx
@@ -81,6 +81,36 @@ sidebar:
 
 ---
 
+### 📊 6 рівень: Жрець Катаклізмів
+
+---
+
+#### 🔭 Передбачення Катаклізмів
+Пасивно виявляйте наближення катаклізмів та бачте їх заздалегідь, дозволяючи підготуватися до них.
+
+#### 🌩️ Шторм Психіки
+Безпосередньо впливайте на Духовні Тіла ваших супротивників, викликаючи запаморочення та дезорієнтацію, роблячи їх вразливими до помилок.
+
+#### 🧲 Притягнення Катаклізмів
+Притягуйте різні катаклізми, щоб вплинути на цілі та ворогів. Завдяки вашій удачі, ви можете уникнути більшості небезпек.
+
+---
+
+### 📊 5 рівень: Переможець
+
+---
+
+#### 🍀 Посилення Удачі
+Пасивно збільшує вашу удачу, надаючи різноманітні позитивні ефекти та іноді викликаючи щасливі випадки.
+
+#### 📉 Прокляття Невдачі
+Накладіть на ворогів прокляття невдачі, спричиняючи їм випадкові невдачі та збільшуючи отримувані пошкодження.
+
+#### 🪙 Накопичення Удачі
+Акумулюйте удачу з плином часу і вивільняйте її для могутніх ефектів. Сильніші ефекти вимагають більше накопиченої удачі.
+
+---
+
 ## ❓ Часті питання
 
 ### 💪 Які основні переваги Шляху Колеса Фортуни?
