--- a/src/content/docs/guides/qct.mdx
+++ b/src/content/docs/guides/qct.mdx
@@ -39,7 +39,7 @@ import trader from '../../../assets/qct/trader.png';
 
 🚶‍♂️ Ви можете зустріти **мандрівного торговця** під час своїх подорожей або в **Святилищі** (на спавні)
 
-💰 Він пропонує **обміняти ваші знахідки** на корисні предмети або навіть **валюту сервера**.
+💰 Він пропонує **обміняти ваші знахідки** на корисні предмети.
 
 🔥 Не пропустіть його — можливо, саме він допоможе вам знайти щось справді **цінне**!
 
