Update information about season length

--- a/src/content/docs/general/start.mdx
+++ b/src/content/docs/general/start.mdx
@@ -75,7 +75,7 @@ sidebar:
 
 ## ⏳ Скільки триває сезон?
 
-Тривалість сезону – **мінімум 6 місяців**.
+Тривалість сезону – **від 6 до 12 місяців**.
 Остаточна тривалість залежить від **оновлень гри** та **активності гравців**.
 
 ---
