--- a/src/content/docs/magic/potions.mdx
+++ b/src/content/docs/magic/potions.mdx
@@ -2,9 +2,11 @@
 title: 🧪 Вступ до магічних зіль
 description: Детальна інформація про магічні зілля на сервері
 sidebar:
-  label: 🧪 Вступ до магії
-  order: 1
+label: 🧪 Вступ до магії
+order: 1
 ---
+
+import magical_altar_interface from '../../../assets/magic/magical-altar-interface.png';
 
 :::caution[⚠️ Дисклеймер]
 > 🎭 За те, що дарує доля, завжди доводиться платити, чи не так?
@@ -49,7 +51,7 @@ sidebar:
 🔎 Зазвичай, це **кастомні предмети**, які можна знайти або отримати, виконавши певні умови.  
 ❓ Які саме? Це доведеться дізнатися **самостійно!**
 
-### 🌟 Магічні характеристики
+## 🌟 Магічні характеристики
 
 Іноді у світі ти можеш натрапити на **Безмежні Характеристики** — предмети, схожі на кольорові кульки.  
 🔄 Вони можуть **замінити** один із основних інгредієнтів у рецепті.
@@ -89,15 +91,19 @@ sidebar:
 📌 Щоб стати Потойбічним, виконайте наступні кроки:
 
 1. 🔎 **Знайдіть** магічний рецепт з описом потрібних інгредієнтів
-2. 🏗️ **Побудуйте** Магічну зіллєварку, встановивши казан **над Вогнищем Душ**
+2. 🏗️ **Побудуйте** Магічну зіллєварку, згідно зі схемою яку можна знайти у відкритому світі.
 3. ⚗️ **Зберіть** усі необхідні основні та додаткові інгредієнти
 4. 🎛️ **Розмістіть** складники у казані:
-    - **Основні** інгредієнти — **ліворуч**
-    - **Додаткові** інгредієнти — **праворуч**
-    - **Рецепт** — **по центру**
-5. 🖱️ **Натисніть кнопку взаємодії**, щоб почати варіння!
+5.  - **Основні** інгредієнти — **ліворуч** 🔴
+- **Додаткові** інгредієнти — **праворуч** 🔵
+- **Рецепт** — **по центру** 🟡
+<p align={"center"}>
+    <img src={magical_altar_interface.src} width={"60%"}
+         alt="Візуальне доповнення, як користуватися магічною зіллєваркою"/>
+</p>
+6. 🖱️ **Натисніть кнопку взаємодії** 🟢, щоб почати варіння!
 
-✅ Якщо все зроблено правильно — у слоті результату з’явиться **зілля**, яке можна випити для отримання сил.  
+✅ Якщо все зроблено правильно — у інвентарі з’явиться **зілля**, яке можна випити для отримання сил.  
 ❌ Якщо щось піде не так — інгредієнти можуть зникнути або ефект буде **непередбачуваним**!
 
 ---
