Update potions page formatting.

--- a/src/content/docs/magic/potions.mdx
+++ b/src/content/docs/magic/potions.mdx
@@ -2,8 +2,8 @@
 title: 🧪 Вступ до магічних зіль
 description: Детальна інформація про магічні зілля на сервері
 sidebar:
-label: 🧪 Вступ до магії
-order: 1
+    label: 🧪 Вступ до магії
+    order: 1
 ---
 
 import magical_altar_interface from '../../../assets/magic/magical-altar-interface.png';
@@ -91,12 +91,12 @@ import magical_altar_interface from '../../../assets/magic/magical-altar-interfa
 📌 Щоб стати Потойбічним, виконайте наступні кроки:
 
 1. 🔎 **Знайдіть** магічний рецепт з описом потрібних інгредієнтів
-2. 🏗️ **Побудуйте** Магічну зіллєварку, згідно зі схемою яку можна знайти у відкритому світі.
+2. 🏗️ **Побудуйте** Магічну зіллєварку, згідно зі **схемою яку можна знайти у відкритому світі**.
 3. ⚗️ **Зберіть** усі необхідні основні та додаткові інгредієнти
 4. 🎛️ **Розмістіть** складники у казані:
 5.  - **Основні** інгредієнти — **ліворуч** 🔴
-- **Додаткові** інгредієнти — **праворуч** 🔵
-- **Рецепт** — **по центру** 🟡
+    - **Додаткові** інгредієнти — **праворуч** 🔵
+    - **Рецепт** — **по центру** 🟡
 <p align={"center"}>
     <img src={magical_altar_interface.src} width={"60%"}
          alt="Візуальне доповнення, як користуватися магічною зіллєваркою"/>
