Enhance homepage layout and footer design; update various content sections for clarity and consistency

--- a/src/content/docs/general/features.mdx
+++ b/src/content/docs/general/features.mdx
@@ -17,9 +17,9 @@ import bluemap from '../../../assets/additions/bluemap.png';
 На сервері працює **система збереження речей після смерті**.
 Якщо ви загинули, не хвилюйтеся! Просто дотримуйтеся наступних кроків:
 
-- > 1️⃣ **Не панікувати!** Все під контролем
-- > 2️⃣ **Знайти місце смерті** та повернутися туди
-- > 3️⃣ **Орієнтуватися по голові вашого скіна**, що залишиться на землі
+1. Не панікувати! Все під контролем
+2. Знайти місце смерті та повернутися туди
+3. Орієнтуватися по голові вашого скіна, що залишиться на землі
 
 📌 На місці смерті ви знайдете **вашу душу**, яка містить:
 - **Усі предмети** з інвентаря
