--- a/src/content/docs/general/start.mdx
+++ b/src/content/docs/general/start.mdx
@@ -2,7 +2,7 @@
 title: Загальні вказівки для новачків
 description: Список загальних вказівок для користувачів
 sidebar:
-    label: 📌 Початок
+    label: Початок
     order: 1
 ---
 
@@ -22,10 +22,10 @@ sidebar:
 
 Попри те, що сервер досі **приватний**, потрапити до нашої спільноти стало **набагато легше**! Виконайте кілька простих кроків:
 
-1️⃣ **Увійдіть через Discord** на нашому сайті.
-2️⃣ **Заповніть анкету** або **придбайте допуск**.
-3️⃣ **Дочекайтеся перевірки анкети**.
-4️⃣ **Під’єднайтеся до сервера** та розпочніть пригоду! 🎉
+1. Увійдіть через Discord на нашому сайті
+2. Заповніть анкету або придбайте допуск
+3. Дочекайтеся перевірки анкети
+4. Під’єднайтеся до сервера та розпочніть пригоду!
 
 ---
 
@@ -65,9 +65,9 @@ sidebar:
 
 Перед тим як звертатися до адміністрації, спробуйте:
 
-- 1️⃣ **Переглянути нашу Вікі** 📖
-- 2️⃣ **Скористатися пошуком** 🔍
-- 3️⃣ **Задати питання на форумі** 💬
+1. Переглянути нашу Вікі
+2. Скористатися пошуком
+3. Поставити питання на форумі
 
 Якщо відповідь знайти не вдалося – ми завжди раді допомогти!
 
