--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -1,21 +1,69 @@
 ---
-title: Вікіпедія
+title: ""
 description: Єдине місце для всіх ваших запитань
-hasSidebar: true
+hasSidebar: false
 isFallback: true
+template: splash
 ---
 
 
-import about from '../../assets/about.png';
-
-<div class="text-center">
-    <h2>📚 <strong>Вітаємо на вікіпедії сервера!</strong></h2>
-    <p class=" text-center">Єдине місце для всіх ваших запитань. Обирайте тему, яка вас цікавить, і дізнайтеся більше!
-        Не знайшли відповідь на своє питання? Поставте його на нашому форумі. Або ж скористайтеся пошуком! </p>
-
-    <img
-        src={about.src}
-        alt="Вікіпедія сервера" width="100%"/>
-
+<div className="uap-hero">
+    <div className="uap-hero-content">
+        <h1>📚 Вікіпедія UAProject</h1>
+        <p>Повний довідник українського Minecraft сервера</p>
+    </div>
 </div>
 
+<div className="uap-cards-grid">
+    <div className="uap-card">
+        <div className="uap-card-icon">🎮</div>
+        <h3>Швидкий старт</h3>
+        <p>Все необхідне для початку гри на сервері</p>
+        <a href="/general/start/" className="uap-card-link">Розпочати →</a>
+    </div>
+
+    <div className="uap-card">
+        <div className="uap-card-icon">☄️</div>
+        <h3>Інформація</h3>
+        <p>Основи сервера, економіка, особливості та можливості</p>
+        <a href="/general/start/" className="uap-card-link">Почати →</a>
+    </div>
+    
+    <div className="uap-card">
+        <div className="uap-card-icon">📔</div>
+        <h3>Посібники</h3>
+        <p>Покрокові інструкції з усіх функцій сервера</p>
+        <a href="/guides/towny/" className="uap-card-link">Дізнатися →</a>
+    </div>
+    
+    <div className="uap-card">
+        <div className="uap-card-icon">☔</div>
+        <h3>Магія</h3>
+        <p>Система магії, створіння зілля та магічні артефакти</p>
+        <a href="/magic/potions/" className="uap-card-link">Вивчити →</a>
+    </div>
+    
+    <div className="uap-card">
+        <div className="uap-card-icon">🪄</div>
+        <h3>Магічні шляхи</h3>
+        <p>Унікальні класи персонажів з особливими здібностями</p>
+        <a href="/pathways/sun/" className="uap-card-link">Обрати →</a>
+    </div>
+    
+    <div className="uap-card">
+        <div className="uap-card-icon">✨</div>
+        <h3>Підтримка</h3>
+        <p>Допомога, голосування та інформація про магазин</p>
+        <a href="/support/about/" className="uap-card-link">Допомога →</a>
+    </div>
+
+    <div className="uap-card uap-card-highlight">
+        <div className="uap-card-icon">🔍</div>
+        <h3>Не знайшли відповідь?</h3>
+        <p>Скористайтеся пошуком або поставте питання на форумі</p>
+        <div className="uap-card-actions">
+            <div className="uap-search-btn" title="Натисніть Ctrl+K або Cmd+K для пошуку">🔍 Пошук (Ctrl+K)</div>
+            <a href="https://discord.gg/uaproject" className="uap-search-btn uap-search-btn-secondary">💬 Discord</a>
+        </div>
+    </div>
+</div>
