Update links to new domain in documentation and configuration files

--- a/src/content/docs/general/cosmetics.mdx
+++ b/src/content/docs/general/cosmetics.mdx
@@ -36,7 +36,7 @@ import menu from '../../../assets/cosmetics/menu.png';
 
 Є кілька способів:
 
-- 🛒 **Придбати токен** у [Крамниці сервера](https://www.uaproject.xyz/shop), вказавши свій нікнейм. Потім активуйте його натисканням ПКМ.
+- 🛒 **Придбати токен** у [Крамниці сервера](https://www.uaproject.net/shop), вказавши свій нікнейм. Потім активуйте його натисканням ПКМ.
 - 💰 **Обміняти** у мандрівного торговця за внутрішньоігрову валюту (**Аури, Ліки, Копійки**).
 - 🏆 **Виграти** на ігровому івенті або отримати як нагороду за допомогу адміністрації (зокрема за **баг-репорти**).
 
