--- a/src/content/docs/general/features.mdx
+++ b/src/content/docs/general/features.mdx
@@ -42,7 +42,7 @@ import bluemap from '../../../assets/additions/bluemap.png';
 - 🌄 **Оцінювати красу світу**
 - 📍 **Планувати подорожі**
 
-📌 Щоб відкрити мапу, перейдіть на **[цю сторінку](https://map.uaproject.xyz/)**.
+📌 Щоб відкрити мапу, перейдіть на **[цю сторінку](https://map.uaproject.net/)**.
 
 <p align={"center"}>
     <img src={bluemap.src} width={"100%"} alt="Онлайн мапа серверу"/>
