Remove magic related stuff from the wiki

--- a/src/content/docs/general/start.mdx
+++ b/src/content/docs/general/start.mdx
@@ -2,7 +2,7 @@
 title: Загальні вказівки для новачків
 description: Список загальних вказівок для користувачів
 sidebar:
-    label: Початок
+    label: ⭐ Початок
     order: 1
 ---
 
